Aggiunta sezione citazione, fix di alcuni overflow

--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
-    display: flex;
-    flex-direction: column;
     margin: 0;
-    height: 100vh;
-    overflow: hidden;
-    
+}
+
+.cont-primario {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 /* Header */
 .header {
@@ -54,7 +55,7 @@ ul {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
     color: #E5E7EB;
-    height: 80px;
+    padding: 30px;
 }
 
 /* Fine Footer */
@@ -66,6 +67,7 @@ ul {
     display: flex;
     background-color: #1F2937;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .left-p {
@@ -85,8 +87,11 @@ ul {
 }
 
 .right-p img{
-    height: 250px;
-    width: 600px;
+    flex: 1;
+    max-height: 250px;
+    height: auto;
+    width: auto;
+    max-width: 550px;
 }
 
 .left-p .catch {
@@ -156,5 +161,34 @@ button.Registrati{
     text-align: center;
     font-size: 16px;
     margin-bottom: 50px;
-    
 }
+
+/* Fine informazioni */
+
+/* Citazione */
+
+.contenitore-cit {
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+    background-color: #E5E7EB;
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+}
+
+
+.citazione {
+    display: flex;
+    flex-direction: column;
+    width: 900px;
+    padding: 60px;
+    gap: 15px;
+}
+
+.autore {
+    font-weight: bolder;
+    text-align: end;
+}
+
+/* Fine Contenitore */
